[tool.poetry]
name = "task-management"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.2"
sqlalchemy = "^2.0.35"
pydantic = "^2.9.2"
uvicorn = "^0.31.1"
aiosqlite = "^0.20.0"
greenlet = "^3.1.1"
pytest = "^8.3.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
